--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
 		<meta charset="UTF-8">
 		<meta content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0" name="viewport">
 		<meta content="no-siteapp" http-equiv="Cache-Control">
-		<title>谷歌搜索_Google搜索引擎-闪梦聚合搜索</title>
-		<meta name="keywords" content="谷歌搜索,闪梦搜索,极简搜索,搜索导航,Google搜索">
-		<meta name="description" content="闪梦搜索:最便捷的聚合搜索导航,集常用的搜索:含Google公司开发的谷歌搜索引擎,百度,360,soso,搜狗等以及各类网站导航方便大家的搜索服务,一站式搜索资源！">
+		<title>Fox搜索 - 多引擎聚合搜索！</title>
+		<meta name="keywords" content="聚合搜索,Fox搜索,极简搜索,搜索导航,Google搜索">
+		<meta name="description" content="Fox搜索:最便捷的聚合搜索导航,集常用的搜索:含Google公司开发的谷歌搜索引擎,百度,360,soso,搜狗等以及各类网站导航方便大家的搜索服务,一站式搜索资源！">
 		<meta content="yes" name="apple-mobile-web-app-capable">
 		<meta content="yes" name="apple-touch-fullscreen">
 		<meta content="black" name="apple-mobile-web-app-status-bar-style">
