--- a/index.html
+++ b/index.html
@@ -71,17 +71,7 @@
 				<ul id="messageList"></ul>
 			</div>
 			
-			<div class="hitokoto">
-			   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8679598665704616" crossorigin="anonymous"></script>
-<!-- 搜索 -->
-<ins class="adsbygoogle"
-     style="display:inline-block;width:728px;height:90px"
-     data-ad-client="ca-pub-8679598665704616"
-     data-ad-slot="9527157267"></ins>
-<script>
-     (adsbygoogle = window.adsbygoogle || []).push({});
-</script>
-</div>
+			<div class="hitokoto"></div>
 		</div>
 		<!--版权声明-->
 		<div id="copyright"></div> 
