--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 			<div class="hitokoto"></div>
 		</div>
 		<!--版权声明-->
-		<div id="copyright"><span>©2018-2023 Powered by <a href="https://www.laofox.com/">Fox搜索</a><a href="https://beian.miit.gov.cn"> </a> All rights reserved.<a href="https://beian.miit.gov.cn" target="_blank">冀ICP备20003424号</a>
+		<div id="copyright"><span>©2018-2024 Powered by <a href="https://so.aci1.com/">Fox搜索</a> All rights reserved.
 						</span></div>
 		<!--天气服务-->
 		<div class="mywth" id="tp-weather-widget"></div>
