--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <script>
         var xztqkey = "OTVlMDExZmQtNWQyNi00YTJhLWE4ZTktMzdhYTdjYzY1M2M0",
             templates = '',
-			favicon = 'http://favicon.cccyun.cc/';
+			favicon = 'https://t2.gstatic.com/faviconV2?client=SOCIAL&type=FAVICON&fallback_opts=TYPE,SIZE,URL&url=';
     </script>
 </head>
 
