--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 	<link rel="shortcut icon" href="./favicon.ico">
 	<link href="/css/main.css" rel="stylesheet">
 	<link href="/css/common.css" rel="stylesheet">
-	<script src="//at.alicdn.com/t/font_2560790_ie0hct1oxp.js"></script>
+	<script src="https://at.alicdn.com/t/font_2560790_ie0hct1oxp.js"></script>
 	
-	<script src="//cdn.staticfile.org/jquery/3.4.1/jquery.min.js"></script>
+	<script src="https://cdn.staticfile.net/jquery/3.4.1/jquery.min.js"></script>
   
     <script>
         var xztqkey = "OTVlMDExZmQtNWQyNi00YTJhLWE4ZTktMzdhYTdjYzY1M2M0",
