--- a/github.html
+++ b/github.html
@@ -115,7 +115,7 @@
             return false
         }
     </script>
-    <title>GitHub 文件加速</title>
+    <title>GitHub 文件加速 - ACI资源网</title>
 </head>
 <body class="flex">
 <h1 style="margin-bottom: 50px">GitHub 文件加速</h1>
